--- a/html/htmlParsing/index.html
+++ b/html/htmlParsing/index.html
@@ -4,12 +4,10 @@
         <title>
             Title
         </title>
-        <script>
+        <!-- <script>
             alert("Hey I am coming from inline js code");
-        </script>
-        <!-- <script type="text/javascript" src="./index.html">
-
         </script> -->
+        <script type="text/javascript" src="./index.html"></script>
     </head>
     <body>
         <h1>
