01-04-2024 - tech learning starting-002

--- a/html/Code/index.html
+++ b/html/Code/index.html
@@ -4,9 +4,10 @@
         <title>
             Index HTML Title
         </title>
-        <script>
+        <!-- <script>
             alert("Index HTML Script");
-        </script>
+        </script> -->
+        <script type="text/javascript" src="./index.js"></script>
     </head>
     <body>
         <div>
